welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:5: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^DwarfCode:5: warning: enclosing method test has result type Unit: return value discarded
    return true
    ^DwarfCode:7: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^DwarfCode:7: warning: enclosing method test has result type Unit: return value discarded
  return false
  ^DwarfCode:14: error: value unary_! is not a member of Unit
  while(!test()) {
        ^